Use ApplicationWapper to avoid the manual addition of javafx modules